<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:background="@color/green"
        android:orientation="vertical"
        tools:background="@color/red">

        <ImageView
            android:id="@+id/appIconImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_margin_double"
            android:layout_weight="2.4"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon215"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/infoTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/infoTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <com.budiyev.android.circularprogressbar.CircularProgressBar
                android:id="@+id/progressBar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:animateProgress="true"
                app:backgroundStrokeColor="@color/white"
                app:backgroundStrokeWidth="3dp"
                app:drawBackgroundStroke="true"
                app:foregroundStrokeCap="butt"
                app:foregroundStrokeColor="@color/green"
                app:foregroundStrokeWidth="6dp"
                app:indeterminate="false"
                app:indeterminateMinimumAngle="45"
                app:indeterminateRotationAnimationDuration="200"
                app:indeterminateSweepAnimationDuration="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maximum="100"
                app:progress="0"
                app:progressAnimationDuration="10"
                app:startAngle="270" />

            <TextView
                android:id="@+id/progressCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checking_state"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="italic|bold"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintLeft_toLeftOf="@id/progressBar"
                app:layout_constraintRight_toRightOf="@id/progressBar"
                app:layout_constraintTop_toTopOf="@id/progressBar"
                tools:text="100%" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin_double"
            android:text="@string/checking_state"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@id/commonButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/alreadyLatestVersion" />

        <Button
            android:id="@+id/commonButton"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_margin_double"
            android:background="@drawable/mybuttonstyle"
            android:text="@string/check"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            app:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/installedVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/installed_version"
                android:textAlignment="center"
                android:textColor="#375b55"
                android:textSize="24sp"
                android:textStyle="italic|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/installedVersionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_margin"
                android:textAlignment="center"
                android:textColor="#FF375B55"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/installedVersionLabel"
                tools:text="3.21.34" />

            <View
                android:id="@+id/sepLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:layout_marginEnd="@dimen/activity_margin"
                android:background="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/installedVersionTextView" />

            <TextView
                android:id="@+id/availableVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:text="@string/official_version_available"
                android:textAlignment="center"
                android:textColor="#FF375B55"
                android:textSize="24sp"
                android:textStyle="italic|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sepLine" />

            <TextView
                android:id="@+id/availableVersionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_margin"
                android:textAlignment="center"
                android:textColor="#FF375B55"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/availableVersionLabel"
                tools:text="4.5.67" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="Add admob id"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
